# tx2_whole_image_desc_server

./: .gitignore  CMakeLists.txt
srv/: WholeImageDescriptorCompute.srv  WholeImageDescriptorComputeTS.srv
tx2_py3_tfserver/: py2_whole_image_desc_server_ts.py  py3_whole_image_desc_compute_client.py  py3_whole_image_desc_server.py  py3_whole_image_desc_server_pb.py
tx2_py3_tfserver/models.keras/June2019/centeredinput-m1to1-240x320x1__mobilenetv2-block_9_add__K16__allpairloss/: modelarch_and_weights.2000.pb  modelarch_and_weights.2000.pb.pbtxt
